# EASE

./: .gitignore  LICENSE  Makefile  README.md  analyze_out.txt  payload.json  recon_out.json  recon_out_after_fix.json  recon_out_tau080.json  recon_out_tau085_beta1.json
backend/: .pre-commit-config.yaml  pyproject.toml
backend/app/: config.py  dsu.py  loader.py  main.py  models.py  pipeline.py  schemas.py  utils.py
backend/app/api/: supernodes.py
backend/app/ct_compat/: id_utils.py
backend/app/services/: supernode_reconstruction.py
backend/ease_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_dsu.py  test_gating.py  test_pipeline_basic.py  test_replay_determinism.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: AnalysisControls.tsx  AttributionRailView.tsx  Controls.tsx  EnhancedGraphRoute.tsx  ExportUtils.tsx  GraphRoute.tsx  GraphView.tsx  GraphVisualization.tsx  InteractiveControls.tsx  MetricsBar.tsx  PerformanceOptimizer.tsx  SupernodeClusterView.tsx  TimelineControls.tsx  VisualizationControls.tsx
frontend/src/lib/: d3-jetpack.ts  graph-types.ts  graph-utils.ts  neuronpedia-parser.ts
frontend/src/services/: supernodes.ts
frontend/src/services/labels/: autoInterp.ts  labelResolver.ts
scripts/: analyze_charlotte.py  dev.py  push_on_change.sh  run_reconstruction.py
