[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ease-backend"
version = "0.1.0"
requires-python = ">=3.11"
authors = [{ name = "ease contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.4",
  "numpy>=1.26",
  "orjson>=3.9",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []
